--- a/koala-monitor/koala-jmonitor-web-mvc/pom.xml
+++ b/koala-monitor/koala-jmonitor-web-mvc/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.openkoala.security</groupId>
 			<artifactId>koala-security-ss3Adapter</artifactId>
-			<version>${project.parent.version}</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -54,12 +54,12 @@
 		<dependency>
 			<groupId>org.openkoala.security</groupId>
 			<artifactId>koala-security-authImpl</artifactId>
-			<version>${project.parent.version}</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openkoala.security</groupId>
 			<artifactId>koala-security-applicationImpl</artifactId>
-			<version>${project.parent.version}</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
 
